tests-build/tests/fail/macros_dead_code.stderr
error: function `f` is never used
 --> tests/fail/macros_dead_code.rs:6:10
  |
6 | async fn f() {}
  |          ^
  |
note: the lint level is defined here
 --> tests/fail/macros_dead_code.rs:1:9
  |
1 | #![deny(dead_code)]
  |         ^^^^^^^^^
